# agent-shield

./: .agentshield.yml  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/agentshield-cli/: Cargo.toml
crates/agentshield-cli/src/: main.rs  shell_proxy.rs
crates/agentshield-cli/src/commands/: analyze.rs  init.rs  install.rs  mod.rs  notify_cmd.rs  plugin.rs  report.rs  status.rs
crates/agentshield-cli/src/sandbox/: mod.rs
crates/agentshield-cli/src/tui/: mod.rs
crates/agentshield-core/: Cargo.toml
crates/agentshield-core/src/: decision.rs  lib.rs  pipeline.rs  session.rs
crates/agentshield-core/src/ast/: context.rs  mod.rs  powershell.rs
crates/agentshield-core/src/filesystem/: mod.rs
crates/agentshield-core/src/ipc/: client.rs  mod.rs  transport.rs
crates/agentshield-core/src/logging/: mod.rs
crates/agentshield-core/src/network/: mod.rs
crates/agentshield-core/src/notify/: mod.rs
crates/agentshield-core/src/obfuscation/: mod.rs
crates/agentshield-core/src/plugins/: mod.rs
crates/agentshield-core/src/policy/: ast_pattern.rs  mod.rs  schema.rs
crates/agentshield-core/src/session/: manager.rs  mod.rs  process_tree.rs
crates/agentshield-core/src/threat/: mod.rs
crates/agentshield-daemon/: Cargo.toml
crates/agentshield-daemon/src/: analysis.rs  collector.rs  ipc_listener.rs  main.rs  server.rs  state.rs
crates/agentshield-ebpf/: Cargo.toml
crates/agentshield-ebpf/src/: lib.rs
crates/agentshield-etw/: Cargo.toml
crates/agentshield-etw/src/: lib.rs
crates/agentshield-macos/: Cargo.toml
crates/agentshield-macos/src/: lib.rs
crates/agentshield-mcp/: Cargo.toml
crates/agentshield-mcp/src/: main.rs  server.rs
crates/agentshield-plugin-sdk/: Cargo.toml
crates/agentshield-plugin-sdk/src/: lib.rs
crates/agentshield-test-harness/: Cargo.toml
crates/agentshield-test-harness/src/: main.rs
docker/: Dockerfile
docs/: getting-started.md  plugin-development.md  policy-authoring.md
docs/agent-integration/: claude-code.md  cursor.md  langchain.md  mcp.md
extensions/vscode/: package.json  tsconfig.json
extensions/vscode/src/: extension.ts
packaging/homebrew/: agentshield.rb
packaging/scoop/: agentshield.json
policies/: data-science.yml  default.yml  devops.yml  paranoid.yml  web-dev.yml
policies/enterprise/: wdac-example.xml
sdks/node/: package.json  tsconfig.json
sdks/node/src/: guard.ts  hooks.ts  index.ts  ipc.ts  session.ts
sdks/node/src/tests/: hooks.test.ts
sdks/python/: pyproject.toml
sdks/python/agentshield/: __init__.py  guard.py  hooks.py  ipc.py  session.py
sdks/python/tests/: test_guard.py
tests/bypass-suite/: ast_pattern_pipe_bash.yml  base64_encode.yml  env_exfil.yml  indirect_exec.yml  multi_step_chain.yml  pipe_to_shell.yml  powershell_iex.yml  safe_command.yml  string_concat.yml
