[package]
name = "agentshield-core"
description = "Analysis pipeline, policy engine, and decision runtime for AgentShield"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
streaming-iterator = { workspace = true }
reqwest = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "time"] }
interprocess = { workspace = true, features = ["tokio"] }
anyhow = { workspace = true }


[dev-dependencies]
tempfile = "3"