[package]
name = "agentshield-daemon"
description = "AgentShield background daemon — IPC server and OS-native collectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "agentshield-daemon"
path = "src/main.rs"

[dependencies]
agentshield-core = { workspace = true }
agentshield-ebpf = { workspace = true }
agentshield-etw = { workspace = true }
agentshield-macos = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
dirs = { workspace = true }

[dependencies.interprocess]
workspace = true
features = ["tokio"]