[package]
name = "agentshield-mcp"
description = "MCP Tool Server for AgentShield"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentshield-mcp"
path = "src/main.rs"

[dependencies]
agentshield-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }