[package]
name = "agentshield-test-harness"
description = "Red-team bypass suite and integration tests for AgentShield"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "agentshield-test-harness"
path = "src/main.rs"

[dependencies]
agentshield-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
walkdir = "2"