[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "Python SDK for AgentShield — subprocess interception and guard decorators"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentshield*"]